--- a/FE/src/components/layout/content/index.less
+++ b/FE/src/components/layout/content/index.less
@@ -11,3 +11,123 @@
   color: #969696;
   line-height: 1.7;
 }
+
+.link-list{
+  width: 100%;
+  max-width: 1020px;
+  word-wrap: break-word;
+  position: relative;
+  left: 50%;
+  margin-left: -510px;
+  padding: 20px 20px 0px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
+
+.repo-list{
+  position: relative;
+}
+.flex-justify-start{
+  -webkit-box-pack: start !important;
+  justify-content: flex-start !important;
+}
+.py-4{
+  padding-top: 24px !important;
+  padding-bottom: 24px !important;
+}
+.d-flex{
+  display: flex !important;
+}
+.repo-list-item{
+  position: relative;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  list-style: none;
+  border-top: 1px solid #eee;
+}
+.codesearch-results .repo-list-item{
+  border-bottom:0;
+}
+.pr-3{
+  padding-right: 16px !important;
+}
+.col-8{
+  width: 66.66667%;
+}
+.col-2{
+  width: 16.66667%;
+}
+.v-align-middle{
+  vertical-align: middle !important;
+}
+a {
+  color: #0366d6;
+  text-decoration: none;
+  background-color: transparent;
+  text-decoration: none;
+}
+.pr-4{
+  padding-right: 24px !important;
+}
+.mb-2{
+  margin-bottom: 8px !important;
+}
+.mr-3{
+  margin-right: 16px !important;
+}
+.mt-2{
+  margin-top: 8px !important;
+}
+.mb-0{
+  margin-bottom: 0 !important;
+}
+.ml-0{
+  margin-left: 0 !important;
+}
+.pt-2{
+  padding-top: 8px !important;
+}
+.text-gray{
+  color: #586069 !important;
+}
+.d-flex{
+  display: flex !important;
+}
+.f6{
+  font-size: 12px !important;
+}
+.d-table-cell{
+  display: table-cell !important;
+}
+
+.repo-language-color{
+  position: relative;
+  top: 1px;
+  display: inline-block;
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
