--- a/FE/src/components/layout/content/index.less
+++ b/FE/src/components/layout/content/index.less
@@ -51,7 +51,7 @@
   padding-right: 16px !important;
 }
 .col-8{
-  width: 66.66667%;
+  width: 80%;
 }
 .col-2{
   width: 16.66667%;
@@ -109,8 +109,20 @@ a {
 }
 
 
+.ant-carousel .slick-slide {
+  text-align: center;
+  height: 300px;
+  line-height: 300px;
+  background: #FFF;
+  overflow: hidden;
+}
 
-
+.ant-carousel .slick-slide h3 {
+  color: #000;
+}
+.slick-dots>li>button{
+  background-color:#000!important;
+}
 
 
 
