--- a/FE/src/components/layout/header/index.less
+++ b/FE/src/components/layout/header/index.less
@@ -15,9 +15,20 @@
     }
 }
 
-
-
-
+.login-form-forgot{
+	float: right;
+}
+.login-form-button{
+	width: 100%;
+}
+.login-form{
+	width: 400px;
+	height:300px;
+	position: relative;
+	left: 50%;
+	margin-left: -200px;
+	margin-top: 100px;
+}
 
 
 
