--- a/FE/src/components/AdminOperation/user/index.less
+++ b/FE/src/components/AdminOperation/user/index.less
@@ -4,3 +4,16 @@
   border: 1px solid #d9d9d9;
   border-radius: 6px;
 }
+
+.label-avator-wrap{
+	display: inline-block;
+	margin-left: 12px;
+	height:32px;
+	cursor: pointer;
+}
+.label-avator-wrap>input{
+	display: none;
+}
+
+
+
